--- a/index.html
+++ b/index.html
@@ -18,19 +18,23 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
   </head>
   <body>
-    <header class="header">
+    <header class="header ">
       <div class="container-md">
-        <div class="d-flex justify-content-between align-items-center mx-5">
+        <div class="d-flex justify-content-between align-items-md-center align-items-lg-start  mx-md-5 mx-3">
           <div class="logo-wrapper">
             <h1 class="text-uppercase">
               <a href="#index.html">can-did-studios</a>
             </h1>
           </div>
           <div class="nav-wrapper">
-            <div class="nav-bar">
-              <ul class="nav-list">
+           <div class="nav-icon d-md-none d-block ">
+            <i class="fa-solid fa-navicon"></i>
+          </div> 
+            <div class="nav-bar d-md-block d-none  my-5 my-md-0">
+              <ul class="nav-list d-flex align-items-end flex-column flex-md-row ">
                 <li class="sec-link"><a href="#home">Home</a></li>
                 <li class="sec-link"><a href="#about">About</a></li>
                 <li class="sec-link"><a href="#postfolio">Portfolio</a></li>
@@ -38,7 +42,7 @@
               </ul>
             </div>
           </div>
-          <div class="social-icons">
+          <div class="social-icons d-none  d-md-block ">
             <i class="fa-brands fa-instagram"></i>
           </div>
         </div>
@@ -67,7 +71,7 @@
         <div class="d-flex flex-column gap-5">
           <h2 class="sec-heading text-uppercase text-center user-select-none">
             <a href="#about">
-              <span>
+              <span class="px-md-5   px-0">
                 <span>It's </span>
                 <span>all</span>
                 <span>about</span></span
@@ -88,12 +92,12 @@
           </div>
         </div>
         <div class="about-blogs">
-          <div class="row align-items-center">
+          <div class="row  align-items-md-center">
             <div class="col-md-6">
               <div class="row flex-column">
                 <div class="col-12">
                   <div id="blogbox1" class="contentBoxl">
-                    <div class="img-box">
+                    <div class="img-box1">
                       <img src="images/pic01.jpg" alt="About-image" />
                     </div>
                     <div class="related-text">
@@ -109,7 +113,7 @@
                 </div>
                 <div class="col-12">
                   <div id="blogbox2" class="contentBoxl">
-                    <div class="img-box">
+                    <div class="img-box2">
                       <img src="images/pic02.jpg" alt="About-image" />
                     </div>
                     <div class="related-text">
@@ -126,7 +130,7 @@
             </div>
             <div class="col-md-6">
               <div id="blogbox3" class="contentBoxr">
-                <div class="img-box">
+                <div class="img-box3">
                   <img src="images/pic03.jpg" alt="About-image" />
                 </div>
                 <div class="related-text">
@@ -148,7 +152,7 @@
         <div class="d-flex flex-column gap-5">
           <h2 class="sec-heading text-uppercase text-center user-select-none">
             <a href="#portfolio">
-              <span>
+              <span class="px-md-5   px-0">
                 <span>portfolio</span>
 
                 <i class="fa-solid fa-angle-right"></i
@@ -237,7 +241,7 @@
         <div class="d-flex flex-column gap-5">
           <h2 class="sec-heading text-uppercase text-center user-select-none">
             <a href="#about">
-              <span>
+              <span class="px-md-5   px-0">
                 <span>take </span>
                 <span>action</span>
                 <span>today</span>
@@ -287,7 +291,7 @@
                 ></textarea>
               </div>
             </div>
-            <div class="col-3 mx-auto">
+            <div class="col-6 col-md-3 mx-auto">
               <button class="form-btn btn-light w-100">Send Message</button>
               </div>
             </div>
@@ -321,10 +325,11 @@
         </div>
       </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/TextPlugin.min.js"></script>
+    
     <script src="main.js"></script>
   </body>
 </html>
