--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <ul class="nav-list d-flex align-items-end flex-column flex-md-row ">
                 <li class="sec-link"><a href="#home">Home</a></li>
                 <li class="sec-link"><a href="#about">About</a></li>
-                <li class="sec-link"><a href="#postfolio">Portfolio</a></li>
+                <li class="sec-link"><a href="#portfolio">Portfolio</a></li>
                 <li class="sec-link"><a href="#contact">Contact</a></li>
               </ul>
             </div>
